Bug 1277604 - Initialize |mIframeToDiv| in the initialization code like other variables. r=aceman